--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "sass": "^1.69.5",
     "typescript-plugin-css-modules": "^5.0.1"
   }
 }
