--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "jsx": "react-jsx",
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.svg"], 
+  "exclude": ["node_modules"],
+  "svgr": {
+    "typescript": true
+  }
 }
